2011-07-25  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.8.

	* README, USAGE, configure.ac: Updated for release 4.0.8.

2011-06-30  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/PPD.pm: Improved printer entry searh algorithm
	  (find_printer() method) in two points:
	   1. Score match of only make and model in printer ID of the entry
	      higher than match of make and model fields of the entry but
	      lower than match of full printer ID. This raises the relevance
	      of printer ID matches if the search term contains only a partial
	      device ID consisting of only the make and model fields.
	   2. Score a printer entry with an actual printer XML file 1 point
	      higher than an implicit printer entry only coming from a
	      printer name in a driver's printer list. This raises the
	      relevance of actual printer XML entries.

2011-03-04  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/PPD.pm: Handle non-UTF-8 encodings in imported PPD
	  files. Thanks to Richard Hughes (hughsient at gmail dot com) for
	  supplying me this patch from Red Hat.

	* configure.ac: Added libdir support for the ./configure
	  script. Thanks to Richard Hughes (hughsient at gmail dot com) for
	  supplying me this patch from Red Hat.

2011-02-18  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.7.

	* README, USAGE, configure.ac: Updated for release 4.0.7.

2011-01-04  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Improved code of the _get_xml_filelist()
	  function: This avoids repeated construction of the "names-$dir"
	  string and a crash of Perl if the directory does not contain any
	  XML file (bug #613). Thanks to Christopher Yeleighton (giecrilj at
	  stegny dot 2a dot pl) for the report.

	* lib/Foomatic/DB.pm: Fixed wrong quotes in error message which
	  prevented a variable from being substituted by its value (bug